--- a/style.css
+++ b/style.css
@@ -50,7 +50,13 @@ header {
   padding: 0.6em 0.8em;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  gap: 0 1em;
+}
+
+.header-logo {
+  width: 30px;
+  height: 30px;
+  object-fit: contain;
 }
 
 header p {
