--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ form#designForm {
   flex-direction: column;
   gap: 1em;
   padding: 0.8em;
-  background: #f5faff;
+  background: #fff;
   overflow-y: auto;
   border-radius: 0.5em;
 }
@@ -94,12 +94,13 @@ form#designForm {
 
 .input-row input,
 .input-row select {
+  background: #f4f4fa;
   width: 50%;
   flex: 1;
   padding: 10px 14px;
   font-size: 1rem;
-  border: 1px solid #007bff;
-  border-radius: 8px;
+  border: none;
+  border-radius: 7px;
   transition: border-color 0.3s ease;
 }
 
@@ -122,9 +123,13 @@ form#designForm {
   background: #007bff;
   color: white;
   border: none;
-  border-radius: 14px;
+  border-radius: 7px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+}
+
+.btn-submit:hover {
+background: #0056b3;
 }
 
 .btn-reset {
@@ -140,11 +145,10 @@ form#designForm {
 
 .plan-info-section {
   width: 100%;
-  padding: 1em 0;
-  background: #f5faff;
+  padding: 1em 0 0 0;
+  background: #fff;
   display: flex;
   flex-direction: column;
-  gap: 1em;
   text-align: center;
   border-radius: 0.5em
 }
@@ -160,7 +164,7 @@ form#designForm {
 #planOutput {
   white-space: pre-wrap;
   background: #fff;
-  padding: 1em 0.4em 0;
+  padding: 0em 0.4em 0;
   font-family: Consolas, monospace;
   font-size: 1rem;
   color: #000;
@@ -172,7 +176,7 @@ footer {
   padding: 14px 0;
   font-size: 0.8em;
   color: #000;
-  background: #d8dee9;
+  background: #f4f4fa;
   user-select: none;
   margin-top: auto;
 }
@@ -187,7 +191,7 @@ footer {
 .footer-buttons .feedback-btn {
   color: #007bff;
   text-decoration: none;
-  font-weight: 600;
+  font-weight: 500;
   background: transparent;
 }
 
@@ -206,7 +210,7 @@ footer {
   display: inline-flex;
   flex-direction: column;
   width: 160px;
-  background: #f5faff;
+  background: #fff;
   padding: 0.4em 0 0.4em 0;
   border-radius: 12px;
   font-weight: 600;
@@ -222,11 +226,12 @@ footer {
 
 .room select,
 .room input[type="number"] {
+  background: #f4f4fa;
   padding: 8px 10px;
   font-weight: 400;
   font-size: 1rem;
   border-radius: 7px;
-  border: 1px solid #007bff;
+  border: none;
   width: 100%;
   box-sizing: border-box;
 }
