--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
   padding: 0;
 }
 
+body.no-scroll {
+  overflow: hidden;
+  height: 100vh;
+}
+
 /* For tablets */
 @media (max-width: 768px) {
   .navbar {
