--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ main {
 }
 
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: sans-serif;
   background: #fff;
   color: #000;
   display: flex;
@@ -93,7 +93,7 @@ form#designForm {
 
 .input-row label {
   width: 50%;
-  font-weight: 600;
+  font-weight: 410;
   font-size: 1rem;
 }
 
@@ -204,7 +204,6 @@ footer {
   background: #fff;
   padding: 0.4em 0 0.4em 0;
   border-radius: 12px;
-  font-weight: 600;
   color: #000;
   box-sizing: border-box;
   gap: 0.6em;
@@ -213,6 +212,7 @@ footer {
 
 .room label {
   font-size: 0.95rem;
+  font-weight: 410;
 }
 
 .room select,
@@ -264,7 +264,7 @@ footer {
 .side-menu a {
   padding: 12px 20px;
   text-decoration: none;
-  font-size: 1.1em;
+  font-size: 1em;
   color: #000;
   display: block;
   transition: 0.2s;
